[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AHH"
version = "0.1.0"
description = "A brief description of your project."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/yourusername/project_name"

[tool.setuptools]
package-dir = {"" = "src"}
# packages = ["AHH"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["unittest"]

