[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySimpleHeader"
version = "0.1.2"
description = "A brief description of your project."
authors = [
    { name = "super-SuPer-dev"}
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/super-SuPer-dev/pySimpleHeader"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
test = ["unittest"]

[project.scripts]
simpleheader = "simpleheader.__main__:main"